--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ﻿<html>
 <head>
+<CENTER>
 <tittle>出來玩吧!<tittle>
 </head>
 這次北海道旅遊,主要停留在4個景點
@@ -18,4 +19,32 @@
 <li>函館-函館山展望台夜景
 <li>富良野-波斯菊花海
 </ol>
+
+
+<BODY BGCOLOR=#00AAEE" TEXT="#FFFFFF><CENTER><H1><FONT FACE>="標楷體">日本北海道之旅</FONT></H1>
+<H2><FONT FACE="微軟正黑體">夏季的花與草</FONT></H2>
+<IMG SRC="images.png" hight="300" width="300" title="google" alt="google"/>
+<IMG SRC="images.jpg" hight="300" width="300" title="google" alt="google"/>
+<IMG SRC="pic1.jpg" hight="300" width="300" title="yahoo" alt="yahoo"/>
+<br>
+<IMG SRC="0.0.jpg" hight="300" width="300" title="google photo" alt="google photo"/>
+<IMG SRC="000.jpg" hight="300" width="300" title="估狗" alt="估狗"/>
+<IMG SRC="pic4.jpg" hight="300" width="300" title="奇摩" alt="奇摩"/>
+<br>
+<IMG SRC=https://www.mozilla.org/media/img/firefox/firefox-256.e2c1fc556816.jpg hight="300" width="300" title="火狐" alt="火狐"/>
+<IMG SRC=https://img.funtop.tw/2013/08/130830-SW-Waterfox/SW-Waterfox_1.jpg hight="300" width="300" title="firefox" alt="firefox"/>
+<IMG SRC=http://i.imgur.com/grHZOkQ.jpg  hight="300" width="300" title="火狐" alt="火狐"/>
+<P>
+<FONT FACR="細明體">不同於冬季一片雪白的北海道,夏天的北海道是多彩繽紛的．
+<BR>到北海道賞花,<i>彩虹花田</I>薰衣草花海</I>是絕不能錯過的.
+</FONT>
+</CENTER>
+
+
+
+
+
+
+
+</body>
 </html>
